--- a/ShoppinCar/src/shoppincar/Ventana.form
+++ b/ShoppinCar/src/shoppincar/Ventana.form
@@ -4,11 +4,11 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1100, 725]"/>
+      <Dimension value="[1700, 900]"/>
     </Property>
     <Property name="undecorated" type="boolean" value="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1600, 900]"/>
+      <Dimension value="[1700, 900]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -48,7 +48,7 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/img/Mighty-Mouse-Image.png"/>
+              <Image iconType="3" name="/img/MPE__Activities_Extended_04.jpg"/>
             </Property>
           </Properties>
           <Events>
